2005-07-29  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* PkgVersion.pm: Document some functions.
	* PkgVersion.pm, Engine.pm: Replace 'parentessential' concept with
	built_with_essential function, which should make it possible for an
	essential package to be a splitoff.

2005-07-28  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Engine.pm: Separate dep checking and dep switching, so we don't switch
	unnecessarily.

2005-07-28  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Engine.pm: revised "switch debs during long builds" code: if a 
	needed .deb exists but is not installed, we install it without 
	asking.  (If it doesn't exist, we allow the process to continue --
	it will quit with an error, and the user must then start over.)
	
2005-07-28  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: cleanup_debs: don't delete .deb of pkgs that are
	installed but have no .info.

2005-07-27  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Stash the fink PID in the buildlock package.

2005-07-27  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Services.pm: Get rid of gensym, not needed in perl >= 5.6.0.

2005-07-26  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Fix cleanup_sources source filename parsing. Better
	diagnostics during cleanup_sources and cleanup_debs dead time.

2005-07-25  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: only provide default values for LD_PREBIND,
	LD_PREBIND_ALLOW_OVERLAP, and LD_SEG_ADDR_TABLE when the distribution
	is 10.4-transitional and earlier

2005-07-25  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: merge in cleanup_modes branch: orthogonal control
	for deb vs src, --dry-run flag.

2005-07-21  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* PkgVersion.pm: make the default value of LD_PREBIND depend on the 
	distribution (1 for 10.4-transitional and earlier; 0 for 10.4 and 
	later)

2005-07-21  Dave Vasilevsky  <vasi@users.sourceforge.net>
